--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -21,16 +21,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+    - name: Install latest CMake and Ninja
+      uses: lukka/get-cmake@latest
+    - name: Configure
       run: cmake --preset=default
-
     - name: Build
-      # Build your program with the given configuration
-      run: cmake --preset=default --build --config ${{env.BUILD_TYPE}}
-
+      run: cmake --build --preset=default --config=${{env.BUILD_TYPE}}
     - name: Test
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.
