--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -28,8 +28,5 @@ jobs:
     - name: Build
       run: cmake --build --preset=test --config=${{env.BUILD_TYPE}}
     - name: Test
-      working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ${{github.workspace}}/build/test/${{env.BUILD_TYPE}}/sharded_map_test
+      run: ctest --preset=default
 
