give example more fitting name

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,2 @@
-
-
-
-add_executable(list_map list_map.cpp)
-target_link_libraries(list_map PRIVATE sharded_map)
+add_executable(char_map char_map.cpp)
+target_link_libraries(char_map PRIVATE sharded_map)
