add github pages docs (#1)
* fix permissions

* fix permissions

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - master
+      - docs
+
+permissions:
+  contents: write
+  pages: write
 
 jobs:
   documentation:
